# rt-data-collection-application-function

./: .gitmodules  ATTRIBUTION_NOTICE  Dockerfile  README.md  docker-open5gs-dcaf.yaml  meson.build  meson_options.txt
.github/workflows/: build-docker-image.yml  build.yml
common/: meson.build  utilities.h
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nrf.yaml
docker/local/: Dockerfile  Dockerfile-h2-server  docker-compose.yml  docker-open5gs-dcaf.yaml  entrypoint-h2-server.sh  h2_svr-docker.py
docker/remote-package/: docker-compose.yml
docs/: C-APIs-sequence-AF-actions.mmd  C-APIs-sequence.mmd  Data-Collection-AF.md  Doxyfile  HTTP-APIs-sequence.mmd
lib/: meson.build
lib/common/: meson.build  utilities.c  utilities.h
lib/data-collection-service-provider/: .gitignore  ANBRNetworkAssistanceInvocationRecord-internal.h  ANBRNetworkAssistanceInvocationRecord.cc  AccessTokenErr-internal.h  AccessTokenErr.cc  AccessTokenReq-internal.h  AccessTokenReq.cc  AccuracyFulfilmentIndicator-internal.h  AccuracyFulfilmentIndicator.cc  AccuracyFulfilmentIndicator_anyOf-internal.h  AccuracyFulfilmentIndicator_anyOf.cc  AddrFqdn-internal.h  AddrFqdn.cc  AfEvent-internal.h  AfEvent.cc  AfEventExposureNotif-internal.h  AfEventExposureNotif.cc  AfEventExposureSubsc-internal.h  AfEventExposureSubsc.cc  AfEventNotification-internal.h  AfEventNotification.cc  AfEvent_anyOf-internal.h  AfEvent_anyOf.cc  AnyType.cc  AppExpUeBehaviour-internal.h  AppExpUeBehaviour.cc  ApplicationFlowDescription-internal.h  ApplicationFlowDescription.cc  ApplicationSpecificRecord-internal.h  ApplicationSpecificRecord.cc  ApplicationSpecificRecord_allOf-internal.h  ApplicationSpecificRecord_allOf.cc  BaseEventCollection-internal.h  BaseEventCollection.cc  BaseEventRecord-internal.h  BaseEventRecord.cc  BaseRecord-internal.h  BaseRecord.cc  BaseRecord_1-internal.h  BaseRecord_1.cc  (+618 more)
lib/data-collection-service-provider/include/: meson.build
lib/data-collection-service-provider/include/data-collection-sp/: ANBRNetworkAssistanceInvocationRecord.h  AccessTokenErr.h  AccessTokenReq.h  AccuracyFulfilmentIndicator.h  AccuracyFulfilmentIndicator_anyOf.h  AddrFqdn.h  AfEvent.h  AfEventExposureNotif.h  AfEventExposureSubsc.h  AfEventNotification.h  AfEvent_anyOf.h  AnyType.h  AppExpUeBehaviour.h  ApplicationFlowDescription.h  ApplicationSpecificRecord.h  ApplicationSpecificRecord_allOf.h  BaseEventCollection.h  BaseEventRecord.h  BaseRecord.h  BaseRecord_1.h  BatteryIndication.h  BatteryIndication_anyOf.h  BufferedNotificationsAction.h  BufferedNotificationsAction_anyOf.h  CacheStatus.h  CacheStatus_anyOf.h  CellIdentifierType.h  CellIdentifierType_anyOf.h  CivicAddress.h  ClientQosSpecification.h  CollectiveBehaviourFilter.h  CollectiveBehaviourFilterType.h  CollectiveBehaviourFilterType_anyOf.h  CollectiveBehaviourInfo.h  CommunicationCollection.h  CommunicationIndicator.h  CommunicationIndicator_anyOf.h  CommunicationRecord.h  CommunicationRecord_allOf.h  ConsumptionReportingEvent.h  (+274 more)
lib/data-collection-service-provider/openapi-generator-templates/: api-info-head.mustache
src/: meson.build
src/5gdcaf/: dcaf-sm.h  event.c  sbi-path.c  sbi-path.h  utilities.c  utilities.h
src/data-collection-af/: .gitignore  app.c  communication-record.c  communication-record.h  context.c  context.h  dcaf-sm.c  dcaf.yaml.in  event-notification.c  event-notification.h  event.h  generator-dcaf  hash.h  init.c  init.h  meson.build  regexpr.c  regexpr.h  sbi-path.c  utilities.c  utilities.h
subprojects/: .gitignore  open5gs.wrap  rt-5gc-service-producers.wrap
subprojects/packagefiles/: open5gs.patch
systemd/: 5gc-data-collection-application-function.service.in  90-rt-data-collection-application-function.preset  meson.build  rt-data-collection-application-function.service.in
tests/: README  h2_svr.py  local-dcaf.yaml  meson.build  run_test_scripts.sh
tests/data/: 002_configure-good-configuration.json  007_bucketing-10s_buckets.json  008_aggregation_max.json  008_aggregation_mean.json  008_aggregation_min.json  008_aggregation_none.json  008_aggregation_sum.json  008_aggregation_sum_mean.json  presets.sh
tests/scripts/: 000_prepare.sh  001_provisioning_session.sh  002_configure.sh  003_data_reporting_session.sh  004_data_reporting.sh  005_event_exposure_subscription.sh  006_event_exposure_notification.sh  007_bucketing.sh  008_aggregations.sh  987_delete_event_exposure.sh  988_delete_data_reporting_session.sh  989_delete_configuration.sh  990_delete_provisioning_session.sh  999_shutdown.sh
tools/: README  generate-c-bindings-libspdc  post-process.sh
tools/openapi-generator-templates/: config.yaml  data-type.mustache  free-data.mustache  make-empty-result.mustache  make-result.mustache  make-value.mustache  model-header.mustache  model-internal.mustache  model-source.mustache
tools/snippets/internal/: AfEventExposureSubsc-internal.h  AfEventExposureSubsc.cpp
tools/snippets/public/: AccuracyFulfilmentIndicator.h  DataReportingCondition.cpp  DataReportingCondition.h  DataReportingRule.cpp  DataReportingRule.h  DataSamplingRule.cpp  DataSamplingRule.h
usage/insomnia/: Insomnia_2025-02-05.json  Insomnia_DCAF.yaml  insomnia_collection.json
