# License: 5G-MAG Public License (v1.0)
# Copyright: (C) 2024 British Broadcasting Corporation
#
# For full license terms please see the LICENSE file distributed with this
# program. If this file is missing then the license can be retrieved from
# https://drive.google.com/file/d/1cinCiA778IErENZ3JN52VFW-1ffHpx7Z/view

libapp_dep = open5gs_project.get_variable('libapp_dep')
libcore_dep = open5gs_project.get_variable('libcore_dep')
libcrypt_dep = open5gs_project.get_variable('libcrypt_dep')
libsbi_dep = open5gs_project.get_variable('libsbi_dep')
libinc = open5gs_project.get_variable('libinc')

libpcre2 = dependency('libpcre2-8')

latest_apis = get_option('latest_apis')
fiveg_api_approval = get_option('fiveg_api_approval')
fiveg_api_release = get_option('fiveg_api_release')

subdir('include')

fs = import('fs')

libspdc_dist_sources = files('''
    data-collection.c

    context.c
    context.h
    data-collection-nf-service.c
    data-collection-nf-service.h
    data-collection-process.c
    data-collection-process.h
    data-report.c
    data-report.h
    data-report-store.c
    data-report-store.h
    data-report-process.c
    data-report-process.h
    data-reporting-configuration.c
    data-reporting-configuration.h
    data-reporting.c
    data-reporting.h
    event-subscription-process.h
    event-subscription-process.c
    data-reporting-provisioning.c
    data-reporting-provisioning.h
    data-reporting-session-cache.c
    data-reporting-session-cache.h
    event-subscription.h
    event-subscription.c
    ogs-memory-helper.h
    ogs-memory-helper.c
    timer.h
    timer.c
    hash.c
    hash.h
    lib-metadata.c
    lib-metadata.h
    response-cache-control.c
    response-cache-control.h
    server.c
    server.h

AccessTokenErr.cc
AccessTokenErr-internal.h
AccessTokenReq.cc
AccessTokenReq-internal.h
AccuracyFulfilmentIndicator_anyOf.cc
AccuracyFulfilmentIndicator_anyOf-internal.h
AccuracyFulfilmentIndicator.cc
AccuracyFulfilmentIndicator-internal.h
AddrFqdn.cc
AddrFqdn-internal.h
AfEvent_anyOf.cc
AfEvent_anyOf-internal.h
AfEvent.cc
AfEventExposureNotif.cc
AfEventExposureNotif-internal.h
AfEventExposureSubsc.cc
AfEventExposureSubsc-internal.h
AfEvent-internal.h
AfEventNotification.cc
AfEventNotification-internal.h
ANBRNetworkAssistanceInvocationRecord.cc
ANBRNetworkAssistanceInvocationRecord-internal.h
AppExpUeBehaviour.cc
AppExpUeBehaviour-internal.h
ApplicationFlowDescription.cc
ApplicationFlowDescription-internal.h
ApplicationSpecificRecord_allOf.cc
ApplicationSpecificRecord_allOf-internal.h
ApplicationSpecificRecord.cc
ApplicationSpecificRecord-internal.h
BaseEventCollection.cc
BaseEventCollection-internal.h
BaseEventRecord.cc
BaseEventRecord-internal.h
BaseRecord_1.cc
BaseRecord_1-internal.h
BaseRecord.cc
BaseRecord-internal.h
BatteryIndication_anyOf.cc
BatteryIndication_anyOf-internal.h
BatteryIndication.cc
BatteryIndication-internal.h
BufferedNotificationsAction_anyOf.cc
BufferedNotificationsAction_anyOf-internal.h
BufferedNotificationsAction.cc
BufferedNotificationsAction-internal.h
CacheStatus_anyOf.cc
CacheStatus_anyOf-internal.h
CacheStatus.cc
CacheStatus-internal.h
CellIdentifierType_anyOf.cc
CellIdentifierType_anyOf-internal.h
CellIdentifierType.cc
CellIdentifierType-internal.h
CivicAddress.cc
CivicAddress-internal.h
CollectiveBehaviourFilter.cc
CollectiveBehaviourFilter-internal.h
CollectiveBehaviourFilterType_anyOf.cc
CollectiveBehaviourFilterType_anyOf-internal.h
CollectiveBehaviourFilterType.cc
CollectiveBehaviourFilterType-internal.h
CollectiveBehaviourInfo.cc
CollectiveBehaviourInfo-internal.h
CommunicationCollection.cc
CommunicationCollection-internal.h
CommunicationIndicator_anyOf.cc
CommunicationIndicator_anyOf-internal.h
CommunicationIndicator.cc
CommunicationIndicator-internal.h
CommunicationRecord_allOf.cc
CommunicationRecord_allOf-internal.h
CommunicationRecord.cc
CommunicationRecord-internal.h
ConsumptionReportingEvent_allOf.cc
ConsumptionReportingEvent_allOf-internal.h
ConsumptionReportingEvent.cc
ConsumptionReportingEvent-internal.h
ConsumptionReportingUnitsCollection_allOf.cc
ConsumptionReportingUnitsCollection_allOf-internal.h
ConsumptionReportingUnitsCollection.cc
ConsumptionReportingUnitsCollection-internal.h
CpFailureCode_anyOf.cc
CpFailureCode_anyOf-internal.h
CpFailureCode.cc
CpFailureCode-internal.h
CpParameterSet.cc
CpParameterSet-internal.h
DataAccessProfile.cc
DataAccessProfile-internal.h
DataAccessProfile_locationAccessRestrictions.cc
DataAccessProfile_locationAccessRestrictions-internal.h
DataAccessProfile_timeAccessRestrictions.cc
DataAccessProfile_timeAccessRestrictions-internal.h
DataAccessProfile_userAccessRestrictions.cc
DataAccessProfile_userAccessRestrictions-internal.h
DataAccessProfile_userAccessRestrictions_userIds_inner.cc
DataAccessProfile_userAccessRestrictions_userIds_inner-internal.h
DataAggregationFunctionType_anyOf.cc
DataAggregationFunctionType_anyOf-internal.h
DataAggregationFunctionType.cc
DataAggregationFunctionType-internal.h
DataCollectionClientType_anyOf.cc
DataCollectionClientType_anyOf-internal.h
DataCollectionClientType.cc
DataCollectionClientType-internal.h
DataDomain_anyOf.cc
DataDomain_anyOf-internal.h
DataDomain.cc
DataDomain-internal.h
DataProcessingType_anyOf.cc
DataProcessingType_anyOf-internal.h
DataProcessingType.cc
DataProcessingType-internal.h
DataReport.cc
DataReportingCondition.cc
DataReportingCondition-internal.h
DataReportingCondition_threshold.cc
DataReportingCondition_threshold-internal.h
DataReportingConditionType_anyOf.cc
DataReportingConditionType_anyOf-internal.h
DataReportingConditionType.cc
DataReportingConditionType-internal.h
DataReportingConfiguration.cc
DataReportingConfiguration-internal.h
DataReportingConfigurationPatch.cc
DataReportingConfigurationPatch-internal.h
DataReportingEventTrigger_anyOf.cc
DataReportingEventTrigger_anyOf-internal.h
DataReportingEventTrigger.cc
DataReportingEventTrigger-internal.h
DataReportingProvisioningSession.cc
DataReportingProvisioningSession-internal.h
DataReportingRule.cc
DataReportingRule-internal.h
DataReportingSession.cc
DataReportingSession-internal.h
DataReport-internal.h
DataSamplingRule.cc
DataSamplingRule-internal.h
DatVolTransTimeCollection.cc
DatVolTransTimeCollection-internal.h
Direction_anyOf.cc
Direction_anyOf-internal.h
Direction.cc
Direction-internal.h
DispersionCollection.cc
DispersionCollection-internal.h
DynamicPolicy.cc
DynamicPolicy-internal.h
DynamicPolicyInvocationEvent_allOf.cc
DynamicPolicyInvocationEvent_allOf-internal.h
DynamicPolicyInvocationEvent.cc
DynamicPolicyInvocationEvent-internal.h
DynamicPolicyInvocationsCollection_allOf.cc
DynamicPolicyInvocationsCollection_allOf-internal.h
DynamicPolicyInvocationsCollection.cc
DynamicPolicyInvocationsCollection-internal.h
Ecgi.cc
Ecgi-internal.h
EllipsoidArc_allOf.cc
EllipsoidArc_allOf-internal.h
EllipsoidArc.cc
EllipsoidArc-internal.h
EndpointAddress.cc
EndpointAddress-internal.h
EthFlowDescription.cc
EthFlowDescription-internal.h
EventConsumerType_anyOf.cc
EventConsumerType_anyOf-internal.h
EventConsumerType.cc
EventConsumerType-internal.h
EventFilter.cc
EventFilter-internal.h
EventRecordType_anyOf.cc
EventRecordType_anyOf-internal.h
EventRecordType.cc
EventRecordType-internal.h
EventsSubs.cc
EventsSubs-internal.h
Exception.cc
ExceptionId_anyOf.cc
ExceptionId_anyOf-internal.h
ExceptionId.cc
ExceptionId-internal.h
ExceptionInfo.cc
ExceptionInfo-internal.h
Exception-internal.h
ExceptionTrend_anyOf.cc
ExceptionTrend_anyOf-internal.h
ExceptionTrend.cc
ExceptionTrend-internal.h
FixType_anyOf.cc
FixType_anyOf-internal.h
FixType.cc
FixType-internal.h
FlowDirection_anyOf.cc
FlowDirection_anyOf-internal.h
FlowDirection.cc
FlowDirection-internal.h
FlowInfo.cc
FlowInfo-internal.h
GADShape.cc
GADShape-internal.h
GeographicalCoordinates.cc
GeographicalCoordinates-internal.h
GeographicArea.cc
GeographicArea-internal.h
GlobalRanNodeId.cc
GlobalRanNodeId-internal.h
GNbId.cc
GNbId-internal.h
GNSSAssistDataInfo.cc
GNSSAssistDataInfo-internal.h
GnssId_anyOf.cc
GnssId_anyOf-internal.h
GnssId.cc
GnssId-internal.h
GnssPositioningMethodAndUsage.cc
GnssPositioningMethodAndUsage-internal.h
GNSSServArea.cc
GNSSServArea-internal.h
HighAccuracyGnssMetrics.cc
HighAccuracyGnssMetrics-internal.h
HorizontalVelocity.cc
HorizontalVelocity-internal.h
HorizontalVelocityWithUncertainty.cc
HorizontalVelocityWithUncertainty-internal.h
HorizontalWithVerticalVelocityAndUncertainty.cc
HorizontalWithVerticalVelocityAndUncertainty-internal.h
HorizontalWithVerticalVelocity.cc
HorizontalWithVerticalVelocity-internal.h
IndoorOutdoorInd_anyOf.cc
IndoorOutdoorInd_anyOf-internal.h
IndoorOutdoorInd.cc
IndoorOutdoorInd-internal.h
InvalidParam.cc
InvalidParam-internal.h
IpAddr.cc
IpAddr-internal.h
IpPacketFilterSet.cc
IpPacketFilterSet-internal.h
Ipv6Addr.cc
Ipv6Addr-internal.h
Ipv6Prefix.cc
Ipv6Prefix-internal.h
Local2dPointUncertaintyEllipse_allOf.cc
Local2dPointUncertaintyEllipse_allOf-internal.h
Local2dPointUncertaintyEllipse.cc
Local2dPointUncertaintyEllipse-internal.h
Local3dPointUncertaintyEllipsoid_allOf.cc
Local3dPointUncertaintyEllipsoid_allOf-internal.h
Local3dPointUncertaintyEllipsoid.cc
Local3dPointUncertaintyEllipsoid-internal.h
LocalArea.cc
LocalArea-internal.h
LocalOrigin.cc
LocalOrigin-internal.h
LocationArea5G.cc
LocationArea5G-internal.h
LocationData.cc
LocationData-internal.h
LocationRecord_allOf.cc
LocationRecord_allOf-internal.h
LocationRecord.cc
LocationRecord-internal.h
LosNlosMeasureInd_anyOf.cc
LosNlosMeasureInd_anyOf-internal.h
LosNlosMeasureInd.cc
LosNlosMeasureInd-internal.h
M5BitRateSpecification.cc
M5BitRateSpecification-internal.h
M5QoSSpecification.cc
M5QoSSpecification-internal.h
MediaStreamingAccess.cc
MediaStreamingAccess_connectionMetrics.cc
MediaStreamingAccess_connectionMetrics-internal.h
MediaStreamingAccessesCollection_allOf.cc
MediaStreamingAccessesCollection_allOf-internal.h
MediaStreamingAccessesCollection.cc
MediaStreamingAccessesCollection-internal.h
MediaStreamingAccessEvent.cc
MediaStreamingAccessEvent-internal.h
MediaStreamingAccess-internal.h
MediaStreamingAccessRecord.cc
MediaStreamingAccessRecord-internal.h
MediaStreamingAccess_requestMessage.cc
MediaStreamingAccess_requestMessage-internal.h
MediaStreamingAccess_responseMessage.cc
MediaStreamingAccess_responseMessage-internal.h
MediaStreamingBaseReportingRecord.cc
MediaStreamingBaseReportingRecord-internal.h
MediaStreamingSessionIdentification.cc
MediaStreamingSessionIdentification-internal.h
MediaTransportProto_anyOf.cc
MediaTransportProto_anyOf-internal.h
MediaTransportProto.cc
MediaTransportProto-internal.h
MediaType_anyOf.cc
MediaType_anyOf-internal.h
MediaType.cc
MediaType-internal.h
MinorLocationQoS.cc
MinorLocationQoS-internal.h
MlModelInterInd.cc
MlModelInterInd-internal.h
MSAccessActivityCollection.cc
MSAccessActivityCollection-internal.h
MsConsumptionCollection.cc
MsConsumptionCollection-internal.h
MsDynPolicyInvocationCollection.cc
MsDynPolicyInvocationCollection-internal.h
MsNetAssInvocationCollection.cc
MsNetAssInvocationCollection-internal.h
MsQoeMetricsCollection.cc
MsQoeMetricsCollection-internal.h
MutingExceptionInstructions.cc
MutingExceptionInstructions-internal.h
MutingNotificationsSettings.cc
MutingNotificationsSettings-internal.h
Ncgi.cc
Ncgi-internal.h
NetworkAreaInfo.cc
NetworkAreaInfo-internal.h
NetworkAssistanceInvocation.cc
NetworkAssistanceInvocationEvent_allOf.cc
NetworkAssistanceInvocationEvent_allOf-internal.h
NetworkAssistanceInvocationEvent.cc
NetworkAssistanceInvocationEvent-internal.h
NetworkAssistanceInvocation-internal.h
NetworkAssistanceInvocation_recommendedQoS.cc
NetworkAssistanceInvocation_recommendedQoS-internal.h
NetworkAssistanceInvocationsCollection_allOf.cc
NetworkAssistanceInvocationsCollection_allOf-internal.h
NetworkAssistanceInvocationsCollection.cc
NetworkAssistanceInvocationsCollection-internal.h
NetworkAssistanceSession.cc
NetworkAssistanceSession-internal.h
NetworkAssistanceType_anyOf.cc
NetworkAssistanceType_anyOf-internal.h
NetworkAssistanceType.cc
NetworkAssistanceType-internal.h
NFType_anyOf.cc
NFType_anyOf-internal.h
NFType.cc
NFType-internal.h
NoProfileMatchInfo.cc
NoProfileMatchInfo-internal.h
NoProfileMatchReason_anyOf.cc
NoProfileMatchReason_anyOf-internal.h
NoProfileMatchReason.cc
NoProfileMatchReason-internal.h
NotificationFlag_anyOf.cc
NotificationFlag_anyOf-internal.h
NotificationFlag.cc
NotificationFlag-internal.h
NotificationMethod_anyOf.cc
NotificationMethod_anyOf-internal.h
NotificationMethod.cc
NotificationMethod-internal.h
NwdafEvent_anyOf.cc
NwdafEvent_anyOf-internal.h
NwdafEvent.cc
NwdafEvent-internal.h
PartitioningCriteria_anyOf.cc
PartitioningCriteria_anyOf-internal.h
PartitioningCriteria.cc
PartitioningCriteria-internal.h
PduSetHandlingInfo_anyOf.cc
PduSetHandlingInfo_anyOf-internal.h
PduSetHandlingInfo.cc
PduSetHandlingInfo-internal.h
PduSetQosPara.cc
PduSetQosPara-internal.h
PerFlowServiceExperienceInfo.cc
PerFlowServiceExperienceInfo-internal.h
PerformanceData.cc
PerformanceDataCollection.cc
PerformanceDataCollection-internal.h
PerformanceData-internal.h
PerformanceDataRecord_allOf.cc
PerformanceDataRecord_allOf-internal.h
PerformanceDataRecord.cc
PerformanceDataRecord-internal.h
PeriodicEventInfo.cc
PeriodicEventInfo-internal.h
PerUeAttribute.cc
PerUeAttribute-internal.h
PlmnId.cc
PlmnId-internal.h
PlmnIdNid.cc
PlmnIdNid-internal.h
Point_allOf.cc
Point_allOf-internal.h
PointAltitude_allOf.cc
PointAltitude_allOf-internal.h
PointAltitude.cc
PointAltitude-internal.h
PointAltitudeUncertainty_allOf.cc
PointAltitudeUncertainty_allOf-internal.h
PointAltitudeUncertainty.cc
PointAltitudeUncertainty-internal.h
Point.cc
Point-internal.h
PointUncertaintyCircle_allOf.cc
PointUncertaintyCircle_allOf-internal.h
PointUncertaintyCircle.cc
PointUncertaintyCircle-internal.h
PointUncertaintyEllipse_allOf.cc
PointUncertaintyEllipse_allOf-internal.h
PointUncertaintyEllipse.cc
PointUncertaintyEllipse-internal.h
Polygon_allOf.cc
Polygon_allOf-internal.h
Polygon.cc
Polygon-internal.h
PositioningMethodAndUsage.cc
PositioningMethodAndUsage-internal.h
PositioningMethod_anyOf.cc
PositioningMethod_anyOf-internal.h
PositioningMethod.cc
PositioningMethod-internal.h
PositioningMode_anyOf.cc
PositioningMode_anyOf-internal.h
PositioningMode.cc
PositioningMode-internal.h
ProblemDetails.cc
ProblemDetails-internal.h
ProtocolDescription.cc
ProtocolDescription-internal.h
ProvisioningSessionType_anyOf.cc
ProvisioningSessionType_anyOf-internal.h
ProvisioningSessionType.cc
ProvisioningSessionType-internal.h
QoEMetricsCollection_allOf.cc
QoEMetricsCollection_allOf-internal.h
QoEMetricsCollection.cc
QoEMetricsCollection-internal.h
QoEMetricsEvent_allOf.cc
QoEMetricsEvent_allOf-internal.h
QoEMetricsEvent_allOf_metrics.cc
QoEMetricsEvent_allOf_metrics-internal.h
QoEMetricsEvent_allOf_samples.cc
QoEMetricsEvent_allOf_samples-internal.h
QoEMetricsEvent.cc
QoEMetricsEvent-internal.h
QueryParamCombination.cc
QueryParamCombination-internal.h
QueryParameter.cc
QueryParameter-internal.h
r_2DRelativeLocation.cc
r_2DRelativeLocation-internal.h
r_3DRelativeLocation.cc
r_3DRelativeLocation-internal.h
RangeDirection.cc
RangeDirection-internal.h
RedirectResponse.cc
RedirectResponse-internal.h
RelativeCartesianLocation.cc
RelativeCartesianLocation-internal.h
RelativeDirection_anyOf.cc
RelativeDirection_anyOf-internal.h
RelativeDirection.cc
RelativeDirection-internal.h
ReportingInformation.cc
ReportingInformation-internal.h
RtpHeaderExtInfo.cc
RtpHeaderExtInfo-internal.h
RtpHeaderExtType_anyOf.cc
RtpHeaderExtType_anyOf-internal.h
RtpHeaderExtType.cc
RtpHeaderExtType-internal.h
RtpPayloadFormat_anyOf.cc
RtpPayloadFormat_anyOf-internal.h
RtpPayloadFormat.cc
RtpPayloadFormat-internal.h
RtpPayloadInfo.cc
RtpPayloadInfo-internal.h
ScheduledCommunicationTime.cc
ScheduledCommunicationTime-internal.h
ScheduledCommunicationType_anyOf.cc
ScheduledCommunicationType_anyOf-internal.h
ScheduledCommunicationType.cc
ScheduledCommunicationType-internal.h
SdfMethod_anyOf.cc
SdfMethod_anyOf-internal.h
SdfMethod.cc
SdfMethod-internal.h
ServiceExperienceInfoPerApp.cc
ServiceExperienceInfoPerApp-internal.h
ServiceExperienceInfoPerFlow.cc
ServiceExperienceInfoPerFlow-internal.h
ServiceExperienceRecord_allOf.cc
ServiceExperienceRecord_allOf-internal.h
ServiceExperienceRecord.cc
ServiceExperienceRecord-internal.h
Snssai.cc
Snssai-internal.h
StationaryIndication_anyOf.cc
StationaryIndication_anyOf-internal.h
StationaryIndication.cc
StationaryIndication-internal.h
SubscriptionAction_anyOf.cc
SubscriptionAction_anyOf-internal.h
SubscriptionAction.cc
SubscriptionAction-internal.h
SupportedGADShapes_anyOf.cc
SupportedGADShapes_anyOf-internal.h
SupportedGADShapes.cc
SupportedGADShapes-internal.h
SvcExperience.cc
SvcExperience-internal.h
Tai.cc
Tai-internal.h
TimeWindow.cc
TimeWindow-internal.h
TrafficProfile_anyOf.cc
TrafficProfile_anyOf-internal.h
TrafficProfile.cc
TrafficProfile-internal.h
TripPlanRecord_allOf.cc
TripPlanRecord_allOf-internal.h
TripPlanRecord.cc
TripPlanRecord-internal.h
TypedLocation.cc
TypedLocation-internal.h
UeAreaIndication.cc
UeAreaIndication-internal.h
UeCommunicationCollection.cc
UeCommunicationCollection-internal.h
UeMobilityCollection.cc
UeMobilityCollection-internal.h
UeTrajectoryCollection.cc
UeTrajectoryCollection-internal.h
UmtLocationArea5G_allOf.cc
UmtLocationArea5G_allOf-internal.h
UmtLocationArea5G.cc
UmtLocationArea5G-internal.h
UncertaintyEllipse.cc
UncertaintyEllipse-internal.h
UncertaintyEllipsoid.cc
UncertaintyEllipsoid-internal.h
UnidirectionalQoSSpecification.cc
UnidirectionalQoSSpecification-internal.h
Usage_anyOf.cc
Usage_anyOf-internal.h
Usage.cc
Usage-internal.h
UsageThreshold.cc
UsageThreshold-internal.h
UserDataCongestionCollection.cc
UserDataCongestionCollection-internal.h
VelocityEstimate.cc
VelocityEstimate-internal.h
VerticalDirection.cc
VerticalDirection-internal.h
'''.split())

api_tag = latest_apis?'REL-'+fiveg_api_release:'TSG'+fiveg_api_approval+'-Rel'+fiveg_api_release

gen_5gspdc_sh = find_program('sh')
openapi_dep_file = meson.current_source_dir() / '.openapi.srcs'
message('Generating OpenAPI bindings for version '+api_tag+' of the 5G APIs...')
openapi_gen_result = run_command([gen_5gspdc_sh,'-c','"$MESON_SOURCE_ROOT/$MESON_SUBDIR/generator-libspdc" -M "'+openapi_dep_file+'" -b '+api_tag], capture: true, check: true)
libspdc_gen_sources = files(fs.read(openapi_dep_file).split())

libspdc_sources = libspdc_dist_sources + libspdc_gen_sources

libspdc_libinc = include_directories('.')
libspdc_lib_openapiinc = include_directories('openapi/model')

libspdc = library(libspdc_name,
    sources : libspdc_sources,
    c_args : '-DBUILD_DATA_COLLECTION_LIB',
    include_directories : [libspdc_libinc, libspdc_lib_openapiinc, libspdc_inc, libdc_common_libinc, libinc],
    gnu_symbol_visibility : 'hidden',
    link_whole: [libdccommon],
    dependencies : [libapp_dep,
                    libcore_dep,
                    libcrypt_dep,
		    libsbi_dep,
                    libpcre2],
    version : libspdc_version,
    install : true)

libspdc_dep = declare_dependency(
    link_with : libspdc,
    include_directories : [libspdc_inc, libinc],
    dependencies : [libapp_dep,
                    libcore_dep,
                    libcrypt_dep,
		    libsbi_dep,
                    libpcre2]
    )

